api_versioned_docs/version-12.0.5/avalonia/controls/treedatagridcolumn.mdx
---
title: 'TreeDataGridColumn'
hide_title: true
slug: '/avalonia/controls/treedatagridcolumn'
uid: 'Avalonia.Controls.TreeDataGridColumn'
commentId: 'T:Avalonia.Controls.TreeDataGridColumn'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TreeDataGridColumn Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Base class for columns in a [Avalonia.Controls.TreeDataGrid](xref:Avalonia.Controls.TreeDataGrid).

</div>

<div className="apiref-page__signature">

```csharp
public class TreeDataGridColumn
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> TreeDataGridColumn
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Derived types:</span> <a href="treedatagridboundcolumn">TreeDataGridBoundColumn</a>, <a href="treedatagridhierarchicalexpandercolumn">TreeDataGridHierarchicalExpanderColumn</a>, <a href="treedatagridrowheadercolumn">TreeDataGridRowHeaderColumn</a>, <a href="treedatagridtemplatecolumn">TreeDataGridTemplateColumn</a>
</div>
</div>

## Methods

| Name | Description |
| --- | --- |
| [Bind (8 overloads)](../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CheckAccess](../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CoerceValue](../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Equals](../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetBaseValue](../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetHashCode](../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsAnimating](../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsSet](../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [VerifyAccess](../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

## Properties

| Name | Description |
| --- | --- |
| [ActualWidth](#uid-f6a5b4a5e1) | Gets the actual width of the column after measurement. |
| [AllowTriStateSorting](#uid-96d4d7c2ac) | Gets or sets whether the user can cycle through ascending, descending, and unsorted states when clicking the column header. |
| [BeginEditGestures](#uid-8bbe396a27) | Gets or sets the gesture(s) that will cause a cell to enter edit mode. |
| [CanUserResize](#uid-f144900437) | Gets or sets a value indicating whether the user can resize the column by dragging. |
| [CanUserSort](#uid-02c9a571fa) | Gets or sets a value indicating whether the user can sort the column by clicking. |
| [CellRenderer](#uid-b02f9b5394) | Gets the cell renderer for this column, or null if the column uses control-based cells. |
| [CompareAscending](#uid-c7f2a2dd78) | Gets or sets a custom comparison for ascending sort order. |
| [CompareDescending](#uid-5452b638ce) | Gets or sets a custom comparison for descending sort order. |
| [Header](#uid-e8ac01fc32) | Gets or sets the column header. |
| [IsVisible](#uid-56b3ceb8c9) | Gets or sets a value indicating whether the column is visible. |
| [MaxWidth](#uid-86cf116775) | Gets or sets the maximum width for the column. |
| [MinWidth](#uid-02e431a650) | Gets or sets the minimum width for the column. |
| [SortDirection](#uid-2ec9c41915) | Gets or sets the sort direction indicator that will be displayed on the column. |
| [Tag](#uid-1da1891e70) | Gets or sets a user-defined object attached to the column. |
| [Width](#uid-e2a65dc530) | Gets or sets the width of the column. |
| [Dispatcher](../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Item](../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-f6a5b4a5e1"></span>

### ActualWidth Property

Gets the actual width of the column after measurement.

```csharp
public double ActualWidth { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-96d4d7c2ac"></span>

### AllowTriStateSorting Property

Gets or sets whether the user can cycle through ascending, descending, and unsorted
states when clicking the column header.

```csharp
public Nullable<bool> AllowTriStateSorting { get; set; }
```

#### Remarks

Only applies if [Avalonia.Controls.TreeDataGridColumn.CanUserSort](xref:Avalonia.Controls.TreeDataGridColumn.CanUserSort) is true. If null, the owner
[Avalonia.Controls.TreeDataGrid.AllowTriStateSorting](xref:Avalonia.Controls.TreeDataGrid.AllowTriStateSorting)
property value will apply.

</section>

<section className="apiref-page__member-entry">

<span id="uid-8bbe396a27"></span>

### BeginEditGestures Property

Gets or sets the gesture(s) that will cause a cell to enter edit mode.

```csharp
public Avalonia.Controls.BeginEditGestures BeginEditGestures { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f144900437"></span>

### CanUserResize Property

Gets or sets a value indicating whether the user can resize the column by dragging.

```csharp
public Nullable<bool> CanUserResize { get; set; }
```

#### Remarks

If null, the owner [Avalonia.Controls.TreeDataGrid.CanUserResizeColumns](xref:Avalonia.Controls.TreeDataGrid.CanUserResizeColumns)
property value will apply.

</section>

<section className="apiref-page__member-entry">

<span id="uid-02c9a571fa"></span>

### CanUserSort Property

Gets or sets a value indicating whether the user can sort the column by clicking.

```csharp
public Nullable<bool> CanUserSort { get; set; }
```

#### Remarks

If null, the owner [Avalonia.Controls.TreeDataGrid.CanUserSortColumns](xref:Avalonia.Controls.TreeDataGrid.CanUserSortColumns)
property value will apply.

</section>

<section className="apiref-page__member-entry">

<span id="uid-b02f9b5394"></span>

### CellRenderer Property

Gets the cell renderer for this column, or null if the column uses control-based cells.

```csharp
public Avalonia.Controls.CellRenderer CellRenderer { get; set; }
```

#### Remarks

When a [Avalonia.Controls.TreeDataGridColumn.CellRenderer](xref:Avalonia.Controls.TreeDataGridColumn.CellRenderer) is set, the column's cells are drawn directly by the
[Avalonia.Controls.Primitives.TreeDataGridCellsPresenter](xref:Avalonia.Controls.Primitives.TreeDataGridCellsPresenter) rather than by per-cell controls.

</section>

<section className="apiref-page__member-entry">

<span id="uid-c7f2a2dd78"></span>

### CompareAscending Property

Gets or sets a custom comparison for ascending sort order.

```csharp
public Comparison<object> CompareAscending { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5452b638ce"></span>

### CompareDescending Property

Gets or sets a custom comparison for descending sort order.

```csharp
public Comparison<object> CompareDescending { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e8ac01fc32"></span>

### Header Property

Gets or sets the column header.

```csharp
public object Header { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-56b3ceb8c9"></span>

### IsVisible Property

Gets or sets a value indicating whether the column is visible.

```csharp
public bool IsVisible { get; set; }
```

#### Remarks

When set to false, the column header and cells will not be rendered and the column
will not contribute to layout calculations.

</section>

<section className="apiref-page__member-entry">

<span id="uid-86cf116775"></span>

### MaxWidth Property

Gets or sets the maximum width for the column.

```csharp
public Nullable<Avalonia.Controls.GridLength> MaxWidth { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-02e431a650"></span>

### MinWidth Property

Gets or sets the minimum width for the column.

```csharp
public Avalonia.Controls.GridLength MinWidth { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2ec9c41915"></span>

### SortDirection Property

Gets or sets the sort direction indicator that will be displayed on the column.

```csharp
public Nullable<System.ComponentModel.ListSortDirection> SortDirection { get; set; }
```

#### Remarks

Note that changing this property does not change the sorting of the data, it is only
used to display a sort direction indicator. To sort data according to a column use
[Avalonia.Controls.TreeDataGridSource.SortBy(Avalonia.Controls.TreeDataGridColumn,System.ComponentModel.ListSortDirection)](xref:Avalonia.Controls.TreeDataGridSource.SortBy%28Avalonia.Controls.TreeDataGridColumn%2CSystem.ComponentModel.ListSortDirection%29).

</section>

<section className="apiref-page__member-entry">

<span id="uid-1da1891e70"></span>

### Tag Property

Gets or sets a user-defined object attached to the column.

```csharp
public object Tag { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e2a65dc530"></span>

### Width Property

Gets or sets the width of the column.

```csharp
public Avalonia.Controls.GridLength Width { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [ActualWidthProperty](#uid-e364c8be18) | Defines the [Avalonia.Controls.TreeDataGridColumn.ActualWidth](xref:Avalonia.Controls.TreeDataGridColumn.ActualWidth) property. |
| [AllowTriStateSortingProperty](#uid-6ae1bb0dd4) | Defines the [Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting](xref:Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting) property. |
| [BeginEditGesturesProperty](#uid-dc2ed09efd) | Defines the [Avalonia.Controls.TreeDataGridColumn.BeginEditGestures](xref:Avalonia.Controls.TreeDataGridColumn.BeginEditGestures) property. |
| [CanUserResizeProperty](#uid-571bbcdf1a) | Defines the [Avalonia.Controls.TreeDataGridColumn.CanUserResize](xref:Avalonia.Controls.TreeDataGridColumn.CanUserResize) property. |
| [CanUserSortProperty](#uid-ba3617e072) | Defines the [Avalonia.Controls.TreeDataGridColumn.CanUserSort](xref:Avalonia.Controls.TreeDataGridColumn.CanUserSort) property. |
| [CompareAscendingProperty](#uid-b64fb913c3) | Defines the [Avalonia.Controls.TreeDataGridColumn.CompareAscending](xref:Avalonia.Controls.TreeDataGridColumn.CompareAscending) property. |
| [CompareDescendingProperty](#uid-8793ea737f) | Defines the [Avalonia.Controls.TreeDataGridColumn.CompareDescending](xref:Avalonia.Controls.TreeDataGridColumn.CompareDescending) property. |
| [HeaderProperty](#uid-6bf85e990c) | Defines the [Avalonia.Controls.TreeDataGridColumn.Header](xref:Avalonia.Controls.TreeDataGridColumn.Header) property. |
| [IsVisibleProperty](#uid-3b84d0d8ca) | Defines the [Avalonia.Controls.TreeDataGridColumn.IsVisible](xref:Avalonia.Controls.TreeDataGridColumn.IsVisible) property. |
| [MaxWidthProperty](#uid-dc42964fc0) | Defines the [Avalonia.Controls.TreeDataGridColumn.MaxWidth](xref:Avalonia.Controls.TreeDataGridColumn.MaxWidth) property. |
| [MinWidthProperty](#uid-1ded2efd51) | Defines the [Avalonia.Controls.TreeDataGridColumn.MinWidth](xref:Avalonia.Controls.TreeDataGridColumn.MinWidth) property. |
| [SortDirectionProperty](#uid-0a0a137fb0) | Defines the [Avalonia.Controls.TreeDataGridColumn.SortDirection](xref:Avalonia.Controls.TreeDataGridColumn.SortDirection) property. |
| [TagProperty](#uid-c2056b364a) | Defines the [Avalonia.Controls.TreeDataGridColumn.Tag](xref:Avalonia.Controls.TreeDataGridColumn.Tag) property. |
| [WidthProperty](#uid-b2aa823419) | Defines the [Avalonia.Controls.TreeDataGridColumn.Width](xref:Avalonia.Controls.TreeDataGridColumn.Width) property. |

<section className="apiref-page__member-entry">

<span id="uid-e364c8be18"></span>

### ActualWidthProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.ActualWidth](xref:Avalonia.Controls.TreeDataGridColumn.ActualWidth) property.

```csharp
public Avalonia.DirectProperty<Avalonia.Controls.TreeDataGridColumn, double> ActualWidthProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6ae1bb0dd4"></span>

### AllowTriStateSortingProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting](xref:Avalonia.Controls.TreeDataGridColumn.AllowTriStateSorting) property.

```csharp
public Avalonia.StyledProperty<Nullable<bool>> AllowTriStateSortingProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-dc2ed09efd"></span>

### BeginEditGesturesProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.BeginEditGestures](xref:Avalonia.Controls.TreeDataGridColumn.BeginEditGestures) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.BeginEditGestures> BeginEditGesturesProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-571bbcdf1a"></span>

### CanUserResizeProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.CanUserResize](xref:Avalonia.Controls.TreeDataGridColumn.CanUserResize) property.

```csharp
public Avalonia.StyledProperty<Nullable<bool>> CanUserResizeProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ba3617e072"></span>

### CanUserSortProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.CanUserSort](xref:Avalonia.Controls.TreeDataGridColumn.CanUserSort) property.

```csharp
public Avalonia.StyledProperty<Nullable<bool>> CanUserSortProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b64fb913c3"></span>

### CompareAscendingProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.CompareAscending](xref:Avalonia.Controls.TreeDataGridColumn.CompareAscending) property.

```csharp
public Avalonia.StyledProperty<Comparison<object>> CompareAscendingProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8793ea737f"></span>

### CompareDescendingProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.CompareDescending](xref:Avalonia.Controls.TreeDataGridColumn.CompareDescending) property.

```csharp
public Avalonia.StyledProperty<Comparison<object>> CompareDescendingProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6bf85e990c"></span>

### HeaderProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.Header](xref:Avalonia.Controls.TreeDataGridColumn.Header) property.

```csharp
public Avalonia.StyledProperty<object> HeaderProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3b84d0d8ca"></span>

### IsVisibleProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.IsVisible](xref:Avalonia.Controls.TreeDataGridColumn.IsVisible) property.

```csharp
public Avalonia.StyledProperty<bool> IsVisibleProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-dc42964fc0"></span>

### MaxWidthProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.MaxWidth](xref:Avalonia.Controls.TreeDataGridColumn.MaxWidth) property.

```csharp
public Avalonia.StyledProperty<Nullable<Avalonia.Controls.GridLength>> MaxWidthProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1ded2efd51"></span>

### MinWidthProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.MinWidth](xref:Avalonia.Controls.TreeDataGridColumn.MinWidth) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.GridLength> MinWidthProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0a0a137fb0"></span>

### SortDirectionProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.SortDirection](xref:Avalonia.Controls.TreeDataGridColumn.SortDirection) property.

```csharp
public Avalonia.StyledProperty<Nullable<System.ComponentModel.ListSortDirection>> SortDirectionProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c2056b364a"></span>

### TagProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.Tag](xref:Avalonia.Controls.TreeDataGridColumn.Tag) property.

```csharp
public Avalonia.StyledProperty<object> TagProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b2aa823419"></span>

### WidthProperty Field

Defines the [Avalonia.Controls.TreeDataGridColumn.Width](xref:Avalonia.Controls.TreeDataGridColumn.Width) property.

```csharp
public Avalonia.StyledProperty<Avalonia.Controls.GridLength> WidthProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [PropertyChanged](../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

</ApiRefPage>

